--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
     "noUnusedLocals": true,
     "baseUrl": ".",          
     "paths": {
-        "@components/*": ["src/components/*"]
-    }   
+        "@components/*": ["src/components/*"],
+        "@constant/*": ["src/constant/*"]
+    },
+    "allowSyntheticDefaultImports": true   
   },
   "exclude": [
     "node_modules",
@@ -27,8 +29,7 @@
     "scripts",
     "acceptance-tests",
     "webpack",
-    "jest",
-    "src/setupTests.ts"
+    "jest"
   ],
   "include": [
       "./src"
