--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router-dom": "^4.2.3",
     "antd": "^3.0.3",
     "mockjs": "^1.0.1-beta3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.8.0",
     "tsconfig-paths-webpack-plugin": "^1.2.0"
   },
@@ -22,6 +23,8 @@
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "@types/react-loadable": "^5.3.0",
+    "@types/react-router-dom": "^4.2.3",
     "react-app-rewired": "^1.4.0",
     "ts-import-plugin": "^1.4.3"
   }
