--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
+# ========= client =========
 # dependencies
-/node_modules
-
-# testing
-/coverage
+/client/node_modules
 
 # production
-/build
+/client/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# ========= server =========
+# dependencies
+/server/node_modules
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# production
+/server/dist
