--- a/client/package.json
+++ b/client/package.json
@@ -30,5 +30,6 @@
     "@types/react-router-dom": "^4.2.3",
     "react-app-rewired": "^1.4.0",
     "ts-import-plugin": "^1.4.3"
-  }
+  },
+  "proxy": "http://localhost:9090"
 }
