--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@types/express": "^4.11.0",
     "express": "^4.16.2",
+    "mongodb": "^3.0.1",
     "tsconfig-paths": "^3.1.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.0.1",
     "nodemon": "^1.14.11"
   }
 }
