--- a/server/package.json
+++ b/server/package.json
@@ -5,22 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc && cp tsconfig.json ./dist",
     "dev": "npm run watch-node & npm run watch-build",
     "watch-build": "tsc --watch",
-    "watch-node": "nodemon dist/config/server.js",
-    "start": "node dist/config/server.js"
+    "watch-node": "nodemon ./dist/src/config/server.js",
+    "start": "cd dist && node -r tsconfig-paths/register ./src/config/server.js"
   },
   "author": "zhaopeng",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.11.0",
     "express": "^4.16.2",
-    "mongodb": "^3.0.1",
-    "tsconfig-paths": "^3.1.1"
+    "mongodb": "^3.0.1"
   },
   "devDependencies": {
     "@types/mongodb": "^3.0.1",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "tsconfig-paths": "^3.1.1"
   }
 }
