--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-document-title": "^2.0.1",
     "antd": "^3.0.3",
-    "express": "^4.16.2",
-    "mockjs": "^1.0.1-beta3",
     "react": "^16.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
@@ -25,9 +22,12 @@
     "@types/jest": "^21.1.9",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.31",
+    "@types/react-document-title": "^2.0.1",
     "@types/react-dom": "^16.0.3",
     "@types/react-loadable": "^5.3.0",
     "@types/react-router-dom": "^4.2.3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "react-app-rewired": "^1.4.0",
     "ts-import-plugin": "^1.4.3"
   },
