--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-loadable": "^5.3.0",
     "@types/react-router-dom": "^4.2.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "react-app-rewired": "^1.4.0",
