运动计时暂时完成

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,7 @@
         "@components/*": ["src/components/*"],
         "@constant/*": ["src/constant/*"],
         "@route/*": ["src/route/*"],
+        "@pages/*": ["src/pages/*"],
         "@src/*": ["src/*"]
     },
     "allowSyntheticDefaultImports": true   
