--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
     "@types/react-document-title": "^2.0.1",
     "@types/react-dom": "^16.0.3",
     "@types/react-loadable": "^5.3.0",
+    "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "react-app-rewired": "^1.4.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "ts-import-plugin": "^1.4.3"
   },
   "proxy": "http://localhost:9090"
